--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="theme-color" content="rgba(151, 196, 28, 0.397)" />
     <title>Arshad Ali Ansari</title>
     <link href="CSS/main.css" rel="stylesheet">
 </head>
