--- a/Index.html
+++ b/Index.html
@@ -6,14 +6,24 @@
     <title>Arshad Ali Ansari</title>
     <link href="CSS/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="body">
     <header class = "site-header">
         <img class="profile-pic" src="https://avatars2.githubusercontent.com/u/19163826?s=460&v=4">
-        <div class="site-header-content">
-                <h1>Hi, I am Arshad Ali ansari, </h1>
-                <h1>Let's learn <a class="course-link" href="https://github.com/AliAnsariArshad">from here</a></h1>
-        </div>
-        
+        <h1>Hi, I am Arshad Ali ansari, </h1>
+        <h1></h1>
     </header>
+    <div class="site-header-content">        
+        <h1><u>CAREER OBJECTIVE:</u></h1>
+    </div>
+    <div class="site-content">
+        <h2>To work on a challenging project, which provides an opportunity to enhance my technical skills and knowledge, this could provide me an insight into new aspects so that it would be helpful for my career in Software Testing and Quality Assurance Engineering. I am having 4 plus years of experience in Automation Testing.</h2>
+    </div>
+    <div>
+        <table>
+            <tbody>
+                <td><a href="C:\Users\ansarar\Desktop\Profile\Website2\PersonalDetails.html">PersonalDetails</a></td>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
