changed to path for personalDetails page
changed to path for personalDetails page

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
     <div>
         <table>
             <tbody>
-                <td><a href="C:\Users\ansarar\Desktop\Profile\Website2\PersonalDetails.html">PersonalDetails</a></td>
+                <td><a href="PersonalDetails.html">PersonalDetails</a></td>
             </tbody>
         </table>
     </div>
