--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
         <table>
             <tbody>
                 <td><a href="PersonalDetails.html">PersonalDetails</a></td>
+                <td><a href="Photography.html">Photography</a></td>
             </tbody>
         </table>
     </div>
