--- a/Photography.html
+++ b/Photography.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" content="width=device-width, initial-scale=1" name="viewport">
+        <meta name="theme-color" content="rgba(151, 196, 28, 0.397)" />
+        <title>Photography</title>
+        <link href="CSS/main.css" rel="stylesheet">
+    </head>
+    <body>
+    </body>
+</html>
